--- a/bicycle_tvlqr/bicycle5d_model.ipynb
+++ b/bicycle_tvlqr/bicycle5d_model.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "7a9c57c8-4692-4914-8277-1ddb220b66f8",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "6c628217-15ae-4837-970c-71178b07b875",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "e070ad32-8f19-40e3-99ac-ae4abf9c7423",
    "metadata": {},
    "outputs": [],
@@ -180,27 +180,22 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "5ac1edf7",
+   "id": "638cab66",
    "metadata": {},
    "source": [
-    "# This part takes reference trajectory from `.txt` and test our algorithm in Julia"
+    "# This takes reference trajectory data from `.txt` files and print to C files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "68ca25eb-885c-46ff-8ee8-455824183d9e",
+   "execution_count": 6,
+   "id": "5d871303",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5-element Vector{Float64}:\n",
-       " 20.0\n",
-       " 20.0\n",
-       "  0.7853981633974483\n",
-       "  0.0\n",
-       "  0.0"
+       "export_vec_of_mat_to_c (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -208,162 +203,67 @@
     }
    ],
    "source": [
-    "# Problem data\n",
-    "dt = 0.1  \n",
-    "h = dt\n",
-    "Nx = 5     # number of state\n",
-    "Nu = 2     # number of controls\n",
-    "Nh = 10\n",
-    "Tfinal = 10.0 # final time\n",
-    "Nt = Int(Tfinal/h)+1    # number of time steps\n",
-    "thist = Array(range(0,h*(Nt-1), step=h));\n",
-    "    \n",
-    "# Thrust limits\n",
-    "umax = [2; 0.5]\n",
-    "umin = -umax\n",
-    "\n",
-    "# Cost weights\n",
-    "Q = Array(1.0*I(Nx)); \n",
-    "q = zeros(Nx)\n",
-    "R = Array(.01*I(Nu)); \n",
-    "r = zeros(Nu)\n",
-    "Qn = Array(1.0*I(Nx));\n",
-    "\n",
-    "A = zeros(Nx, Nx)\n",
-    "B = zeros(Nx, Nu)\n",
-    "f = zeros(Nx)\n",
-    "\n",
-    "# Drive from x0 to xf\n",
-    "x0 = [3; -1; 0; 1; 1]\n",
-    "xf = [20.0; 20.0; pi/4; 0; 0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "b42757ee-c6b0-4961-86b8-21510458b7d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Reading files \n",
-    "using DelimitedFiles\n",
-    "uref1 = readdlm(\"uref_data.txt\")\n",
-    "uref1 = reshape(uref1, Nu, Nt-1)\n",
-    "xref1 = readdlm(\"xref_data.txt\")\n",
-    "xref1 = reshape(xref1, Nx, Nt)\n",
-    "uref = [uref1[1:Nu, i] for i = 1:(Nt-1)]\n",
-    "xref = [xref1[1:Nx, i] for i = 1:Nt];\n",
-    "params = (\n",
-    "    Nx = Nx,\n",
-    "    Nu = Nu,\n",
-    "    Nt = Nt,\n",
-    "    N = Nh,\n",
-    "    xref = xref,\n",
-    "    uref = uref,\n",
-    "    Q = Q,\n",
-    "    R = R,\n",
-    "    q = q,\n",
-    "    r = r,\n",
-    "    u_min = umin,\n",
-    "    u_max = umax,\n",
-    ");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "1fed6803-c61c-4cf3-a5a9-547f8915ba7a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "lqr_controller (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function lqr_controller(t, x)\n",
-    "    #LQR Hover Controller\n",
-    "    A = FD.jacobian(_x->rk4(_x, u0), xref)\n",
-    "    B = FD.jacobian(_u->rk4(x0, _u), uref)\n",
-    "    K = dlqr(A,B,Q,R)\n",
-    "    return u_hover - K*(x-xref)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "b2abbdda-195c-47a5-8064-fd49318430bb",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "closed_loop (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function closed_loop(x0,controller,N)\n",
-    "    xhist = zeros(length(x0),N)\n",
-    "    u0 = controller(1,x0)\n",
-    "    uhist = zeros(length(u0),N-1)\n",
-    "    uhist[:,1] .= u0\n",
-    "    xhist[:,1] .= x0\n",
-    "    for k = 1:(N-1)\n",
-    "        uk = controller(k,xhist[:,k], xref[k], uref[k])\n",
-    "        uhist[:,k] = max.(min.(umax, uk), umin) #enforce control limits\n",
-    "        xhist[:,k+1] .= rk4(xhist[:,k],uhist[:,k])\n",
+    "# Export a vector of vectors to C header and source \n",
+    "function export_vec_of_vec_to_c(filename, var_type, var_name, data)\n",
+    "    size = length(data)*length(data[1])\n",
+    "    declare = var_type * \" \" * var_name * \"[\" * string(size) * \"]\"\n",
+    "    def = declare * \" = {\\n\"\n",
+    "    for i=1:length(data)\n",
+    "        def = def * \"  \"\n",
+    "        for j=1:length(data[1])\n",
+    "            def = def * string(data[i][j])\n",
+    "            if j < length(data[1]) \n",
+    "                def = def * \",\"\n",
+    "            end\n",
+    "        end\n",
+    "        if i < length(data)\n",
+    "            def = def * \",\\n\"\n",
+    "        end\n",
     "    end\n",
-    "    return xhist, uhist\n",
+    "    def = def*\"}\"\n",
+    "\n",
+    "    open(filename*\".h\",\"a\") do io\n",
+    "            println(io, def * \";\\n\")\n",
+    "    end\n",
+    "    # open(filename*\".c\",\"a\") do io\n",
+    "    #         println(io, def * \";\\n\")\n",
+    "    # end\n",
+    "    return true\n",
+    "end\n",
+    "# Export a vector of matrix to C header and source (column-based)\n",
+    "function export_vec_of_mat_to_c(filename, var_type, var_name, data)\n",
+    "    size = length(data)*length(data[1])\n",
+    "    declare = var_type * \" \" * var_name * \"[\" * string(size) * \"]\"\n",
+    "    def = declare * \" = {\\n\"\n",
+    "    for i=1:length(data)\n",
+    "        def = def * \"  \"\n",
+    "        vdata = vcat(data[i]...)\n",
+    "        for j=1:length(data[1])\n",
+    "            def = def * string(vdata[j])\n",
+    "            if j < length(data[1]) \n",
+    "                def = def * \",\"\n",
+    "            end\n",
+    "        end\n",
+    "        if i < length(data)\n",
+    "            def = def * \",\\n\"\n",
+    "        end\n",
+    "    end\n",
+    "    def = def*\"}\"\n",
+    "\n",
+    "    open(filename*\".h\",\"a\") do io\n",
+    "            println(io, def * \";\\n\")\n",
+    "    end\n",
+    "    # open(filename*\".c\",\"a\") do io\n",
+    "    #         println(io, def * \";\\n\")\n",
+    "    # end\n",
+    "    return true\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "09da57ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2-element Vector{Vector{Float64}}:\n",
-       " [1.0, 2.0, 3.0, 4.0]\n",
-       " [5.0, 6.0, 7.0, 8.0]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "xref\n",
-    "x = [[1,2.,3,4],[5,6,7,8]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "cbebb3aa-c7b8-438c-8bc8-06aa0cc7a0a1",
+   "execution_count": 8,
+   "id": "8b72dd56",
    "metadata": {},
    "outputs": [
     {
@@ -377,172 +277,20 @@
     }
    ],
    "source": [
-    "# x = [[1,2,3,4],[5,6,7,8]]\n",
+    "Nt = 101\n",
+    "nx = 5\n",
+    "nu = 2\n",
+    "using DelimitedFiles\n",
+    "uref1 = readdlm(\"uref_data.txt\")\n",
+    "uref1 = reshape(uref1, nu, Nt-1)\n",
+    "xref1 = readdlm(\"xref_data.txt\")\n",
+    "xref1 = reshape(xref1, nx, Nt)\n",
+    "uref = [uref1[1:nu, i] for i = 1:(Nt-1)]\n",
+    "xref = [xref1[1:nx, i] for i = 1:Nt];\n",
     "\n",
-    "# Export a vector of vectors to C header and source \n",
-    "function export_vec_to_c(filename, var_type, var_name, data)\n",
-    "    declare = var_type * \" \" * var_name\n",
-    "    def = declare * \" = {\\n\"\n",
-    "    for i=1:length(data)\n",
-    "        def = def * \"  \"\n",
-    "        for j=1:length(data[1])\n",
-    "            def = def * string(data[i][j])\n",
-    "            if j < length(data[1]) \n",
-    "                def = def * \",\"\n",
-    "            end\n",
-    "        end\n",
-    "        if i < length(x)\n",
-    "            def = def * \",\\n\"\n",
-    "        end\n",
-    "    end\n",
-    "    def = def*\"}\"\n",
-    "\n",
-    "    open(filename*\".h\",\"a\") do io\n",
-    "            println(io, declare * \";\\n\")\n",
-    "    end\n",
-    "    open(filename*\".c\",\"a\") do io\n",
-    "            println(io, def * \";\\n\")\n",
-    "    end\n",
-    "    return true\n",
-    "end\n",
-    "export_vec_to_c(\"data\", \"sfloat\", \"X_ref_data\", xref)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "c5f8ec05-35a9-4e7f-a5e2-a4aaf44725c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ineq_con_u_jac (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# This is AL-TVLQR algorithm in Julia\n",
-    "function get_jacobians!(A, B, f, x0, u0)\n",
-    "    @assert size(A) == (Nx, Nx)\n",
-    "    @assert size(B) == (Nx, Nu)\n",
-    "    @assert size(f) == (Nx,)\n",
-    "    A .= FD.jacobian(_x->rk4(_x, u0), x0)\n",
-    "    B .= FD.jacobian(_u->rk4(x0, _u), u0)\n",
-    "    f .= rk4(x0, u0) - rk4(x0, u0)\n",
-    "end\n",
-    "function tiny_Riccati_LTV!(params, A::Matrix, B::Matrix, f::Vector, \n",
-    "        get_jacobians::Function, X, U, K::Vector, d::Vector, P::Vector, p::Vector,μ,ρ)::Integer\n",
-    "    \n",
-    "    Q = params.Q; R = params.R; q = params.q; r = params.r; \n",
-    "    xref = params.xref; uref = params.uref;\n",
-    "    Nx = params.Nx; Nu = params.Nu; N = params.N\n",
-    "    # Copy terminal cost-to-go\n",
-    "    k = N\n",
-    "    P[k] .= Q\n",
-    "    p[k] .= q\n",
-    "\n",
-    "    # Sxx = zeros(n, n)\n",
-    "    # Sxu = zeros(n, m)\n",
-    "    # Sux = zeros(m, n)\n",
-    "    # Suu = zeros(m, m)\n",
-    "    # Sx = zeros(n, 1)\n",
-    "    # Su = zeros(m, 1)\n",
-    "\n",
-    "    for k = N-1:-1:1 \n",
-    "        # get_jacobians!(A, B, f, X[k], U[k])\n",
-    "\n",
-    "        Sx = q + A' * (P[k+1] * f + p[k+1])\n",
-    "        Su = r + B' * (P[k+1] * f + p[k+1])\n",
-    "        Sxx = Q + A'*P[k+1]*A\n",
-    "        Suu = R + B'*P[k+1]*B\n",
-    "        Sxu = P[k+1] * B                \n",
-    "        Suu = R + B'*P[k+1]*B                         \n",
-    "        Sux = B'*P[k+1]*A   \n",
-    "        \n",
-    "        # control constraints\n",
-    "        huv = ineq_con_u(U[k])  # calculate h(u) constraint\n",
-    "        mask = eval_mask(μ[k], huv)  # choose active\n",
-    "        ∇hu = ineq_con_u_jac(U[k])\n",
-    "        Su  += ∇hu'*(μ[k] + ρ*(mask * huv)) # add to cost\n",
-    "        Suu += ρ*∇hu'*mask*∇hu\n",
-    "        \n",
-    "        d[k] .= Suu\\Su\n",
-    "        K[k] .= Suu\\Sux\n",
-    "\n",
-    "        P[k] .= Sxx + K[k]'*Suu*K[k] + K[k]'*Sux + Sux'*K[k]\n",
-    "        p[k] .= Sx + K[k]'*Suu*d[k] + K[k]'*Su + Sux'*d[k]\n",
-    "    end\n",
-    "    \n",
-    "    return 0;\n",
-    "end\n",
-    "function tiny_RiccatiForwardPass_LTV!(params, A, B, f, get_jacobians::Function,\n",
-    "                                    K::Vector, d::Vector, P::Vector, p::Vector, X::Vector, U::Vector) \n",
-    "    N = params.N\n",
-    "    for k=1:N-1\n",
-    "        # get_jacobians!(A, B, f, X[k], U[k])\n",
-    "        U[k] .= -K[k]*X[k] - d[k]\n",
-    "        X[k+1] .= A*X[k] + B*U[k]\n",
-    "    end\n",
-    "  return 0\n",
-    "end\n",
-    "function tiny_AugmentedLagrange_LQR(params, A, B, f, get_jacobians, \n",
-    "        K::Vector, d::Vector, P::Vector, p::Vector, X::Vector, U::Vector)\n",
-    "    # first check the sizes of everything\n",
-    "    @assert length(X) == params.N\n",
-    "    @assert length(U) == params.N-1\n",
-    "    @assert length(X[1]) == params.nx\n",
-    "    @assert length(U[1]) == params.nu\n",
-    "    @assert length(ineq_con_u(params,U[1])) == params.ncu  # no constraint control\n",
-    "    @assert length(ineq_con_x(params,X[1])) == params.ncx  # no constraint state    \n",
-    "end\n",
-    "function eval_mask(μv, huv)  \n",
-    "    # Extract active inequality constraints\n",
-    "    # active set mask\n",
-    "    mask = Diagonal(zeros(length(huv)))\n",
-    "    for i = 1:length(huv)\n",
-    "        mask[i,i] = (μv[i] > 0 || huv[i] > 0)\n",
-    "    end\n",
-    "    mask\n",
-    "end\n",
-    "function ineq_con_u(p,u)\n",
-    "    [u-p.u_max;-u + p.u_min]\n",
-    "end\n",
-    "function ineq_con_u_jac(params, u)\n",
-    "    FD.jacobian(_u -> ineq_con_u(params,_u), u)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "ef704ab7-eda2-472b-8154-4638f9e36288",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: tiny_AL_LQR not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: tiny_AL_LQR not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/SSD/Code/Julia/tinympc-julia-old/bicycle_tvlqr/bicycle5d_tvlqr.ipynb:7"
-     ]
-    }
-   ],
-   "source": [
-    "xhist = [zeros(Nx) for i=1:Nt]\n",
-    "Phist = [zeros(Nx, Nx) for i=1:Nt]\n",
-    "phist = [zeros(Nx) for i=1:Nt]\n",
-    "uhist = [zeros(Nu) for i=1:Nt-1]\n",
-    "Khist = [zeros(Nu, Nx) for i=1:Nt-1]\n",
-    "dhist = [zeros(Nu) for i=1:Nt-1];\n",
-    "xhist = tiny_AL_LQR(params,X,U,P,p,K,d,Xn,Un;atol=1e-1,max_iters = 3000,verbose = true,ρ = 1e0, ϕ = 10.0);"
+    "export_vec_of_vec_to_c(\"al_lqr_ltv_data\", \"sfloat\", \"Xref_data\", xref)\n",
+    "export_vec_of_vec_to_c(\"al_lqr_ltv_data\", \"sfloat\", \"Uref_data\", uref)\n",
+    "# This prints to `al_lqr_ltv_data.h`"
    ]
   }
  ],
