--- a/aug_lag_ltv/aug_lag_lqr.ipynb
+++ b/aug_lag_ltv/aug_lag_lqr.ipynb
@@ -10,9 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/SSD/Code/TinyMPC/julia/aug_lag_ltv/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/SSD/Code/TinyMPC/julia/aug_lag_ltv/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/SSD/Code/TinyMPC/julia/aug_lag_ltv/Manifest.toml`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/SSD/Code/Julia/tinympc-julia-old/aug_lag_ltv/Project.toml`\n"
      ]
     }
    ],
@@ -38,9 +36,8 @@
        "iLQR (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -335,12 +332,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "ff9a97a1-b963-4f01-9223-eee0c5682b7d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ineq_con_x_jac (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# =============================\n",
     "# Example problem formulation and solve\n",
@@ -388,15 +395,24 @@
     "end\n",
     "function ineq_con_x_jac(p,x)\n",
     "    FD.jacobian(_x -> ineq_con_x(p,_x),x)\n",
-    "end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8ac77de5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Nt = 101\n",
     "using DelimitedFiles\n",
     "uref1 = readdlm(\"uref_data.txt\")\n",
-    "uref1 = reshape(uref1, nu, N-1)\n",
+    "uref1 = reshape(uref1, nu, Nt-1)\n",
     "xref1 = readdlm(\"xref_data.txt\")\n",
-    "xref1 = reshape(xref1, nx, N)\n",
-    "uref = [uref1[1:nu, i] for i = 1:(N-1)]\n",
-    "xref = [xref1[1:nx, i] for i = 1:N];"
+    "xref1 = reshape(xref1, nx, Nt)\n",
+    "uref = [uref1[1:nu, i] for i = 1:(Nt-1)]\n",
+    "xref = [xref1[1:nx, i] for i = 1:Nt];"
    ]
   },
   {
@@ -411,9 +427,8 @@
        "true"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -423,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "f36b1cc2-ad88-4852-afd8-2c70559d03fa",
    "metadata": {},
    "outputs": [
@@ -438,9 +453,8 @@
        " 0.0  0.0   0.0         0.0          1.0"
       ]
      },
-     "execution_count": 40,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -449,30 +463,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "f4edd7a6-7756-43ee-a37b-f91abdd18650",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "DimensionMismatch(\"dimensions must match: a has dims (Base.OneTo(4),), b has dims (Base.OneTo(5),), mismatch at 1\")",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "backward pass\n",
+      "forward pass\n",
+      "iter     J           ΔJ        |d|         α        reg         ρ\n",
+      "---------------------------------------------------------------------\n",
+      "  1    4.905e+04   9.69e+02   2.41e+01  1.0000    1.00e-08    1.00e+00\n",
+      "update duals and penalty\n",
+      "convio = 19.919201309197145\n",
+      "\n",
+      "backward pass\n",
+      "forward pass\n",
+      "  2    5.967e+04   5.03e+02   1.68e+01  1.0000    1.00e-08    1.00e+01\n",
+      "update duals and penalty\n",
+      "convio = 18.84157464815071\n",
+      "\n",
+      "backward pass\n",
+      "forward pass\n",
+      "  3    9.087e+04   3.66e+04   1.71e+02  1.0000    1.00e-08    1.00e+02\n",
+      "update duals and penalty\n",
+      "convio = 524.8006644148402\n",
+      "\n",
+      "backward pass\n"
+     ]
+    },
+    {
+     "ename": "PosDefException",
+     "evalue": "PosDefException: matrix is not positive definite; Cholesky factorization failed.",
      "output_type": "error",
      "traceback": [
-      "DimensionMismatch(\"dimensions must match: a has dims (Base.OneTo(4),), b has dims (Base.OneTo(5),), mismatch at 1\")",
-      "",
-      "Stacktrace:",
-      " [1] promote_shape",
-      "   @ ./indices.jl:178 [inlined]",
-      " [2] promote_shape",
-      "   @ ./indices.jl:169 [inlined]",
-      " [3] +(A::Vector{Int64}, Bs::Vector{Int64})",
-      "   @ Base ./arraymath.jl:45",
-      " [4] top-level scope",
-      "   @ In[29]:8",
-      " [5] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [6] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1116"
+      "PosDefException: matrix is not positive definite; Cholesky factorization failed.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] checkpositivedefinite\n",
+      "   @ /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/factorization.jl:18 [inlined]\n",
+      " [2] cholesky!(A::Symmetric{Float64, Matrix{Float64}}, ::Val{false}; check::Bool)\n",
+      "   @ LinearAlgebra /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/cholesky.jl:253\n",
+      " [3] #cholesky#134\n",
+      "   @ /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/cholesky.jl:378 [inlined]\n",
+      " [4] cholesky (repeats 2 times)\n",
+      "   @ /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/cholesky.jl:378 [inlined]\n",
+      " [5] backward_pass!(params::NamedTuple{(:nx, :nu, :ncx, :ncu, :N, :Q, :R, :Qf, :u_min, :u_max, :x_min, :x_max, :Xref, :Uref, :dt, :mc, :mp, :l, :g), Tuple{Int64, Int64, Int64, Int64, Int64, Diagonal{Float64, Vector{Float64}}, Diagonal{Float64, Vector{Float64}}, Diagonal{Float64, Vector{Float64}}, Vector{Float64}, Vector{Float64}, Vector{Int64}, Vector{Int64}, Vector{Vector{Float64}}, Vector{Vector{Float64}}, Float64, Float64, Float64, Float64, Float64}}, X::Vector{Vector{Float64}}, U::Vector{Vector{Float64}}, P::Vector{Matrix{Float64}}, p::Vector{Vector{Float64}}, d::Vector{Vector{Float64}}, K::Vector{Matrix{Float64}}, reg::Float64, μ::Vector{Vector{Float64}}, μx::Vector{Vector{Float64}}, ρ::Float64, λ::Vector{Float64})\n",
+      "   @ Main ~/SSD/Code/Julia/tinympc-julia-old/aug_lag_ltv/aug_lag_lqr.ipynb:82\n",
+      " [6] iLQR(params::NamedTuple{(:nx, :nu, :ncx, :ncu, :N, :Q, :R, :Qf, :u_min, :u_max, :x_min, :x_max, :Xref, :Uref, :dt, :mc, :mp, :l, :g), Tuple{Int64, Int64, Int64, Int64, Int64, Diagonal{Float64, Vector{Float64}}, Diagonal{Float64, Vector{Float64}}, Diagonal{Float64, Vector{Float64}}, Vector{Float64}, Vector{Float64}, Vector{Int64}, Vector{Int64}, Vector{Vector{Float64}}, Vector{Vector{Float64}}, Float64, Float64, Float64, Float64, Float64}}, X::Vector{Vector{Float64}}, U::Vector{Vector{Float64}}, P::Vector{Matrix{Float64}}, p::Vector{Vector{Float64}}, K::Vector{Matrix{Float64}}, d::Vector{Vector{Float64}}, Xn::Vector{Vector{Float64}}, Un::Vector{Vector{Float64}}; atol::Float64, max_iters::Int64, verbose::Bool, ρ::Float64, ϕ::Float64)\n",
+      "   @ Main ~/SSD/Code/Julia/tinympc-julia-old/aug_lag_ltv/aug_lag_lqr.ipynb:226\n",
+      " [7] top-level scope\n",
+      "   @ ~/SSD/Code/Julia/tinympc-julia-old/aug_lag_ltv/aug_lag_lqr.ipynb:60"
      ]
     }
    ],
@@ -484,11 +527,11 @@
     "N = 101\n",
     "dt = 0.1\n",
     "t_vec = dt*(0:N-1)\n",
+    "Xref = 1*xref\n",
+    "Uref = 1*uref\n",
     "x0 = Xref[1] + [2, 0, 0, 0, 0]\n",
-    "# xg = [0,0,0,0]\n",
-    "# Xref = [deepcopy(xg) for i = 1:N]\n",
-    "# Uref = [zeros(nu) for i = 1:N-1]\n",
-    "Q = 1e-1*Diagonal([1,1,1,1.0])\n",
+    "\n",
+    "Q = 1e-1*Diagonal([10,10,1,1,1.0])\n",
     "R = 1e-1*Diagonal([1.0,1.0])\n",
     "Qf = 100*Q\n",
     "\n",
@@ -496,8 +539,8 @@
     "u_max =  6*ones(nu)\n",
     "\n",
     "# state is x y v θ\n",
-    "x_min = [-2,-2,-2,-2]\n",
-    "x_max = [6,8,3,2]\n",
+    "x_min = [-2,-2,-2,-2,-2]\n",
+    "x_max = [6,8,3,2,2]\n",
     "\n",
     "ncx = 2*nx\n",
     "ncu = 2*nu\n",
@@ -555,23 +598,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 35,
    "id": "11a07e23-1361-4e0f-b54c-91d7e74ea3c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4-element Vector{Float64}:\n",
-       " -3.693308835454531e-8\n",
-       "  2.9290803494914225e-8\n",
-       "  4.5335489369524584e-8\n",
-       " -1.4407884871281418e-8"
+       "5-element Vector{Float64}:\n",
+       "   1.6969457995921307\n",
+       "   1.641551211402509\n",
+       " -20.142161955818917\n",
+       "   2.3624937236481407\n",
+       "   3.6655807738815263"
       ]
      },
-     "execution_count": 263,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -580,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "c74dd73e-affb-4f37-b127-37b2a2514cea",
    "metadata": {
     "tags": []
@@ -592,9 +635,8 @@
        "export_vec_of_mat_to_c (generic function with 1 method)"
       ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
