--- a/bicycle_tvlqr/bicycle5d_model.ipynb
+++ b/bicycle_tvlqr/bicycle5d_model.ipynb
@@ -705,8 +705,8 @@
     "uref = [uref1[1:nu, i] for i = 1:(Nt-1)]\n",
     "xref = [xref1[1:nx, i] for i = 1:Nt];\n",
     "\n",
-    "export_vec_of_vec_to_c(\"al_lqr_ltv_data\", \"sfloat\", \"Xref_data\", xref)\n",
-    "export_vec_of_vec_to_c(\"al_lqr_ltv_data\", \"sfloat\", \"Uref_data\", uref)\n",
+    "export_vec_of_vec_to_c(\"al_lqr_ltv_data\", \"tinytype\", \"Xref_data\", xref)\n",
+    "export_vec_of_vec_to_c(\"al_lqr_ltv_data\", \"tinytype\", \"Uref_data\", uref)\n",
     "# This prints to `al_lqr_ltv_data.h`"
    ]
   }
