pendulum swingup need goal cons

--- a/altro_rocket/full_altro_pend.ipynb
+++ b/altro_rocket/full_altro_pend.ipynb
@@ -52,7 +52,7 @@
     "RD.state_dim(::Pendulum) = 2\n",
     "RD.control_dim(::Pendulum) = 1\n",
     "\n",
-    "#RK4 integrator with free time and slack controls \n",
+    "# Pendulum dynamics\n",
     "function RD.discrete_dynamics!(model::Pendulum, x_next, x, u, t, h)\n",
     "    theta = x[1]\n",
     "    theta_dot = x[2]\n",
